# zig-sandbox

./: .gitignore  CLAUDE.md  NEXT.md  NOTES.md  README.md  TODO.md  build.zig  build.zig.zon
.claude/skills/zig-docs-cli/: EXTRACTED.md  README.md  SKILL.md  pyproject.toml
.claude/skills/zig-docs-cli/src/zigdocs/: cli.py  fetch.py  stdlib.py  version.py  wasm.py
.claude/skills/zig-docs-cli/tests/: conftest.py  test_builtins.py  test_cli.py  test_fetch.py  test_stdlib_smoke.py  test_version.py  test_wasm_abi.py  test_wasm_driver.py
.github/workflows/: tracers-ci.yml  tracers-release-smoke.yml  tracers-release.yml
b64-playground/: build.zig.zon
b64-playground/src/: main.zig  root.zig
docs/superpowers/plans/: 2026-05-02-cloud-zig-docs-skill.md
docs/superpowers/specs/: 2026-05-02-cloud-zig-docs-skill-design.md
python-src/: pyproject.toml
sandbox/: IO_CHEATSHEET.md
sandbox/b64-playground/: build.zig
sandbox/b64-playground/src/: main.zig
sandbox/src/: main.zig
src/: main.zig  read_input.zig  root.zig  smart_allocator.zig  temp.zig  test_new_zig_stuff.zig  utils.zig
src/tracers/: main.zig  root.zig
tracers/: README.md  build.zig  build.zig.zon
tracers/scripts/: cut-release.sh  install.sh  uninstall.sh
tracers/src/: main.zig  root.zig
