[project]
name = "zigdocs"
version = "0.2.0"
description = "Cloud-friendly CLI for Zig stdlib + builtin docs (replaces zig-docs MCP)"
requires-python = ">=3.12"
dependencies = [
    "wasmtime>=25.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.scripts]
zigdocs = "zigdocs.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/zigdocs"]

# Be explicit: the vendored WASM is part of the package, not just incidental
# files swept in by hatchling defaults. Keeps editable installs (`uv sync`),
# wheel builds (`uv build`), and future tool installs in lockstep.
[tool.hatch.build.targets.wheel.force-include]
"src/zigdocs/_vendor/main.wasm" = "zigdocs/_vendor/main.wasm"
